--- a/search_result.html
+++ b/search_result.html
@@ -6,6 +6,7 @@
             <meta name="theme-color" content="#008080">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+            <script src="https://kit.fontawesome.com/749e694647.js" crossorigin="anonymous"></script>
             <link rel="stylesheet" href="fontawesome-free-5.13.0-web/css/all.min.css">
             <link rel="stylesheet" href="style.css">
             <link rel="stylesheet" href="normalize.css">
