--- a/testimoials.html
+++ b/testimoials.html
@@ -5,6 +5,7 @@
         <meta name="description" content="">
         <meta name="theme-color" content="#100570">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://kit.fontawesome.com/749e694647.js" crossorigin="anonymous"></script>
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
